* use a local event loop rather than calling process events on the main loop; this keeps the ui refreshing while allowing us to avoid being interupted; still modal but a step int he right direction * speed up collecting papers by ~36x * only allocate packages in the Image class when we need them, and no more than one at a time ==> much, much less memory usage. much.

the model still isn't as efficient as it could be.

result: a 91 directory, 3200 images and 84 packages collection drops from ~14.5s to ~0.4s, or ~97% off of the run time.
the model, in contrast is about twice as slow, or ~.8s.
cold caches and other variants may invoke the usual YMMV.
BUG:190632

svn path=/trunk/KDE/kdebase/workspace/; revision=967239